# btc-cpi-backtest

./: .env.example  .gitattributes  .gitignore  README.md  ed -n 100,260p  pyproject.toml
data/: btc_15m_data_2018_to_2025.csv  btc_price_sample.csv  btcusd_1-min_data.csv  cpi_releases.csv  cpi_sample.csv
src/btc_cpi_backtest/: __init__.py  __main__.py  analysis.py  cli.py  cpi_loader.py  dashboard.py  logging_config.py  market_data.py  price_loader.py  settings.py
tests/: test_analysis.py  test_cli.py  test_cpi_loader.py  test_dashboard.py  test_market_data.py
